--- a/wj.htm
+++ b/wj.htm
@@ -17412,7 +17412,7 @@ for minor suit slams.
           2NT
          </td>
          <td>
-          !CONST+ Lebensohl
+          !F CONST+, Reverse Lebensohl
          </td>
         </tr>
        </table>
@@ -17528,7 +17528,7 @@ for minor suit slams.
             </span>
            </td>
            <td>
-            !MAX, 5+
+            !FG, 5+
             <span class="hcolor">
              &hearts;
             </span>
@@ -17536,7 +17536,7 @@ for minor suit slams.
           </tr>
          </table>
         </li>
-        <li class="last node">
+        <li class="node">
          <table>
           <tr>
            <td class="node" rowspan="1">
@@ -17546,10 +17546,22 @@ for minor suit slams.
             </span>
            </td>
            <td>
-            !MAX, 5+
+            !FG, 5+
             <span class="scolor">
              &spades;
             </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            4M
+           </td>
+           <td>
+            S/T, 5+#
            </td>
           </tr>
          </table>
@@ -17563,7 +17575,7 @@ for minor suit slams.
           3M
          </td>
          <td>
-          !INV+ P/C
+          !P/C
          </td>
         </tr>
        </table>
@@ -17585,10 +17597,223 @@ for minor suit slams.
    </ul>
   </div>
   <p>
-   When RHO bids, X is penalty and usually short in the other major.  Please
-refrain from penalizing with length in both major suits.  It is usually better
-to make our own contract than setting their doubled partscore.
+   When RHO bids, X is penalty and usually short in the other major.  We play
+Rubinsohl here because we need to bid diamonds.  Please refrain from penalizing
+with length in both major suits.  It is usually better to make our own contract
+than setting their doubled partscore.
   </p>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (2
+     <span class="dcolor">
+      &diams;
+     </span>
+     )-Dbl-(2
+     <span class="hcolor">
+      &hearts;
+     </span>
+     <span class="scolor">
+      &spades;
+     </span>
+     )
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          Pass
+         </td>
+         <td>
+          PEN, good 4+# and usually short in the other major
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          !TRF, 5+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          !TRF, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !INV+ (R), usually tolerance in both majors
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="hcolor">
+           &hearts;
+          </span>
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !P/C
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3NT
+         </td>
+         <td>
+          !P/C, choice of games
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (2
+     <span class="dcolor">
+      &diams;
+     </span>
+     )-Dbl-(2
+     <span class="hcolor">
+      &hearts;
+     </span>
+     )
+     <ul>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          P/C
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (2
+     <span class="dcolor">
+      &diams;
+     </span>
+     )-Dbl-(3
+     <span class="hcolor">
+      &hearts;
+     </span>
+     <span class="scolor">
+      &spades;
+     </span>
+     )
+     <ul>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          Dbl
+         </td>
+         <td>
+          PEN, usuaully short in the other major
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <p>
+   After opener shows their major, doubler always penalizes when holding the same
+suit.  This action is mostly safe because doubler sits behind the opener.  More
+importantly, this treatment creates a negative inference that a pass implies
+holding the other major.
+  </p>
+  <ul>
+   <li>
+    (2
+    <span class="dcolor">
+     &diams;
+    </span>
+    )-X-(2
+    <span class="scolor">
+     &spades;
+    </span>
+    ); (3
+    <span class="hcolor">
+     &hearts;
+    </span>
+    )-X = Usually hearts
+   </li>
+   <li>
+    (2
+    <span class="dcolor">
+     &diams;
+    </span>
+    )-X-(2
+    <span class="scolor">
+     &spades;
+    </span>
+    ); (3
+    <span class="hcolor">
+     &hearts;
+    </span>
+    )-P = Spades!
+   </li>
+  </ul>
   <h1>
    Muiderberg 2M
   </h1>
