--- a/blue.htm
+++ b/blue.htm
@@ -9748,7 +9748,7 @@ example.
     &clubs;
    </span>
    ) shows both majors e.g. Landy.  We recommend
-reverse unusual vs. unusual.
+reverse Unusual vs Unusual.
   </p>
   <div class="tree">
    <ul>
@@ -10763,7 +10763,7 @@ via Stayman.
    Over (2NT)
   </h3>
   <p>
-   We have a special unusual vs. unusual structure over 1NT-(2NT) because we have
+   We have a special Unusual vs Unusual structure over 1NT-(2NT) because we have
 not yet shown a suit.
   </p>
   <div class="tree">
