deploy: 4593409fda70367805d05a691790fa4968ed78ff

--- a/blue.htm
+++ b/blue.htm
@@ -11744,7 +11744,7 @@ for minor suit slams.
           2NT
          </td>
          <td>
-          !F CONST+, Reverse Lebensohl
+          !F INV+, Reverse Lebensohl
          </td>
         </tr>
        </table>
@@ -11759,7 +11759,7 @@ for minor suit slams.
             </span>
            </td>
            <td>
-            !P/C, 12&ndash;17 HCP, 5+M
+            !P/C, 12&ndash;14 HCP, 5+M
            </td>
           </tr>
          </table>
@@ -11774,7 +11774,7 @@ for minor suit slams.
             </span>
            </td>
            <td>
-            !BAL, 19+ HCP
+            !S/T, 18+ HCP
            </td>
           </tr>
          </table>
@@ -11786,7 +11786,7 @@ for minor suit slams.
             3M
            </td>
            <td>
-            NAT, 18+ HCP, 5+#
+            NAT, 15&ndash;17 HCP, 5+#
            </td>
           </tr>
          </table>
@@ -11821,93 +11821,61 @@ for minor suit slams.
           </span>
          </td>
          <td>
-          !INV+ (R), usually tolerance in both majors
+          !TRF INV+, 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3M
-           </td>
-           <td>
-            MIN, 5+#
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3NT
-           </td>
-           <td>
-            BAL, 19+ HCP
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="ccolor">
-             &clubs;
-            </span>
-           </td>
-           <td>
-            !FG, 5+
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            !FG, 5+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            4M
-           </td>
-           <td>
-            S/T, 5+#
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
       <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3M
+          3
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
          <td>
-          !P/C
+          !TRF INV+, 5+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !TRF FG, usually 6+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          !STR choice of games
          </td>
         </tr>
        </table>
@@ -11916,10 +11884,13 @@ for minor suit slams.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3NT
+          4
+          <span class="dcolor">
+           &diams;
+          </span>
          </td>
          <td>
-          !P/C, choice of games
+          !PRE choice of games
          </td>
         </tr>
        </table>
@@ -11954,7 +11925,7 @@ than setting their doubled partscore.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          Pass
+          Dbl
          </td>
          <td>
           PEN, good 4+# and usually short in the other major
@@ -12000,30 +11971,19 @@ than setting their doubled partscore.
         <tr>
          <td class="node" rowspan="1">
           3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !INV+ (R), usually tolerance in both majors
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
           <span class="hcolor">
            &hearts;
           </span>
+         </td>
+         <td>
+          !P/C, INV in
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , INV+ in
           <span class="scolor">
            &spades;
           </span>
-         </td>
-         <td>
-          !P/C
          </td>
         </tr>
        </table>
@@ -12032,10 +11992,20 @@ than setting their doubled partscore.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3NT
+          3
+          <span class="scolor">
+           &spades;
+          </span>
          </td>
          <td>
-          !P/C, choice of games
+          !P/C, INV in
+          <span class="scolor">
+           &spades;
+          </span>
+          , FG in
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
@@ -12057,7 +12027,7 @@ than setting their doubled partscore.
      </span>
      )
      <ul>
-      <li class="last node">
+      <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -12068,6 +12038,59 @@ than setting their doubled partscore.
          </td>
          <td>
           P/C
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !TRF, 5+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (2
+     <span class="dcolor">
+      &diams;
+     </span>
+     )-Dbl-(2
+     <span class="scolor">
+      &spades;
+     </span>
+     )
+     <ul>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !TRF, 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
