deploy: a52f19c4baa44decfa5b5acf4d7caf3007f0e920

--- a/wj.htm
+++ b/wj.htm
@@ -105,31 +105,14 @@ bidding system, where the 1
     &clubs;
    </span>
    opening is forcing but not necessarily strong.
-Notably,
-   <strong>
-    we swap the natural suits between 1
-    <span class="ccolor">
-     &clubs;
-    </span>
-    and 1
-    <span class="dcolor">
-     &diams;
-    </span>
-   </strong>
-   by courtesy of Ting-Yu
-Ye (TpKotoba).  In other words, 1
-   <span class="dcolor">
-    &diams;
-   </span>
-   shows clubs, and 1
+Specifically, 1
    <span class="ccolor">
     &clubs;
    </span>
-   has various options
-including a diamond suit.
+   is either quasi-natural or a strong hand (~18+ HCP).
   </p>
   <p>
-   This bidding system is also based on
+   This bidding system is largely based on
    <em>
     Polish Club 2020: Expert.
    </em>
