deploy: 57f0cb2c0a1bb10ff71ae9a541a3fc016e79b57f

--- a/wj.htm
+++ b/wj.htm
@@ -183,10 +183,11 @@ franca of modern bridge.
   </h3>
   <ul>
    <li>
-    We use kickback RKCB 0314 for all suits.
+    We use RKCB 0314 by default.  Advanced players may use Turbo 4NT for minor 
+  suits.
    </li>
    <li>
-    When we have found two fits X and Y, 4Y+1 is 7-key Blackwood (7KCB), RKCB in
+    When we have found two fits X and Y, 4NT is 7-key Blackwood (7KCB), RKCB in
   both suits with each trump Q regarded as half a keycard.
    </li>
    <li>
